fix: fixed header getting covered by other components when scrolling

--- a/devblog/src/components/Header/Header.module.scss
+++ b/devblog/src/components/Header/Header.module.scss
@@ -6,6 +6,7 @@
     box-sizing: border-box;
     font-family: 'Signika', sans-serif;
     position: sticky;
+    z-index: 5;
     top: 0;
 }
 
